<Card> fix style right margin on mobile

--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -22,6 +22,7 @@
     color: $color-white;
     bottom: 20px;
     left: 20px;
+    right: 20px;
     font-size: $fs-m;
     font-weight: 500;
   }
